<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_favorites"
        android:title="@string/menu_favorites"
        app:showAsAction="never"
        android:onClick="favorites"
        android:orderInCategory="100">
    </item>

    <item
        android:id="@+id/wealthy_actors"
        android:title="@string/wealthy_actors"
        app:showAsAction="never"
        android:onClick="actors"
        android:orderInCategory="101">
    </item>

    <item
        android:id="@+id/settings"
        android:onClick="settings"
        android:title="@string/action_settings"
        android:orderInCategory="102"
        app:showAsAction="never">
    </item>

</menu>