<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/card_view"
        app:cardCornerRadius="4dp"
        android:elevation="10dp"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relative_layout">

            <ImageView
                android:id="@+id/imageViewMovie"
                android:layout_width="100dp"
                android:layout_height="125dp"
                android:layout_margin="4dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_movie"/>

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/title"
                android:layout_alignTop="@+id/imageViewMovie"
                android:layout_alignRight="@+id/textViewRating"
                android:layout_alignEnd="@+id/textViewRating"
                android:layout_marginRight="28dp"
                android:layout_marginEnd="28dp" />

            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_alignBottom="@+id/imageViewMovie"
                android:layout_centerHorizontal="true">

            </TextView>
        </RelativeLayout>


    </android.support.v7.widget.CardView>
</RelativeLayout>